--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -27,3 +27,11 @@ jobs:
 
     - name: Build with Gradle
       run: ./gradlew build
+      
+       - name: Build and Push Docker Image
+      uses: mr-smithers-excellent/docker-build-push@v4
+      with:
+        image: aalbouch/demo-app
+        registry: docker.io
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_PASSWORD }}
