--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -28,8 +28,8 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew build
       
-       - name: Build and Push Docker Image
-      uses: mr-smithers-excellent/docker-build-push@v4
+   - name: Log in to Docker Hub
+      uses: mr-smithers-excellent/docker-build-push@v
       with:
         image: aalbouch/demo-app
         registry: docker.io
