--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -29,7 +29,8 @@ jobs:
       run: ./gradlew build
       
     - name: Log in to Docker Hub
-      uses: mr-smithers-excellent/docker-build-push@v
+      uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+    
       with:
         image: aalbouch/demo-app
         registry: docker.io
